# proc_macro_workshop_solutions

./: .gitignore  Cargo.toml  README.md
builder/: Cargo.toml
builder/src/: lib.rs  utils.rs
builder/tests/: progress.rs
debug/: Cargo.toml
debug/src/: lib.rs  utils.rs
debug/tests/: progress.rs
