[package]
name = "proc-macro-workshop"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "workshop"
path = "main.rs"

[dependencies]
bitfield = { path = "bitfield" }
derive_builder = { path = "builder" }
derive_debug = { path = "debug" }
proc-macro2 = "1.0.78"
quote = "1.0.35"
seq = { path = "seq" }
sorted = { path = "sorted" }
syn = "2.0.48"
